# web-researcher

./: .env.vault  .flake8  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/researcher/: web_researcher.py
src/web_researcher/: __init__.py  web_researcher.py
tests/: test_web_researcher.py
